ebb_sources = \
	src/ebb/ebb.hpp \
	$(ebb_EbbManager_sources) \
	$(ebb_MemoryAllocator_sources) \
	$(ebb_EventManager_sources)

include src/ebb/Console/Makefile.am
include src/ebb/EbbManager/Makefile.am
include src/ebb/Ethernet/Makefile.am
include src/ebb/EventManager/Makefile.am
include src/ebb/MemoryAllocator/Makefile.am
include src/ebb/MessageManager/Makefile.am
include src/ebb/PCI/Makefile.am
