ebb_sources = \
	src/ebb/ebb.hpp

include src/ebb/Console/Makefile.am
include src/ebb/EbbManager/Makefile.am
include src/ebb/Ethernet/Makefile.am
include src/ebb/EventManager/Makefile.am
include src/ebb/MemoryAllocator/Makefile.am
include src/ebb/MessageManager/Makefile.am
include src/ebb/PCI/Makefile.am
