# EbbRT: Distributed, Elastic, Runtime
# Copyright (C) 2013 SESA Group, Boston University

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
ebb_sources = \
	src/ebb/ebb.hpp

include src/ebb/Console/Makefile.am
include src/ebb/DataflowCoordinator/Makefile.am
include src/ebb/EbbManager/Makefile.am
include src/ebb/Ethernet/Makefile.am
include src/ebb/EventManager/Makefile.am
include src/ebb/FailureDetector/Makefile.am
include src/ebb/Gthread/Makefile.am
include src/ebb/HashTable/Makefile.am
include src/ebb/MemoryAllocator/Makefile.am
include src/ebb/MessageManager/Makefile.am
include src/ebb/Network/Makefile.am
include src/ebb/PCI/Makefile.am
include src/ebb/Syscall/Makefile.am
include src/ebb/Timer/Makefile.am
